--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
 
     <script src="js/bootstrap.js"></script>
 
-    <link rel="stylesheet" href="css/">
+    <link rel="stylesheet" href="css/app.css">
+
+    <link rel="stylesheet" href="">
 
 </head>
 <body>
-
+Hola mon
 </body>
 </html>
